--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,17 @@
 plugins {
-    id 'com.android.application'
-}
-
+    id 'com.android.application'}
+apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
+
+
+
+
+        dataBinding {
+            enabled = true
+        }
+
 
     defaultConfig {
         applicationId "com.example.dziennikelektroniczny"
@@ -33,7 +40,23 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha04'
+    implementation 'android.arch.navigation:navigation-ui:1.0.0-alpha04'
+    implementation 'android.arch.lifecycle:extensions:1.1.0'
+    annotationProcessor "androidx.lifecycle:lifecycle-common-java8:2.2.0"
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:26.1.1')
+    // dependencies for Firebase Authentication and Cloud Firestore
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
 }
